--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-lodash": "^2.0.2",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
@@ -29,6 +30,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
+    "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
